--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "InstancelatamApp",
+  "name": "instancelatamapp",
   "version": "1.0.0",
   "description": "instancelatam app",
   "main": "index.js",
